--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Request Form</title>
+    <style>
+        body{
+                background-image: url(pexels-photo-844297.jpeg);
+                background-repeat: no-repeat;
+                background-attachment: fixed;
+                background-size: 100% 100%;
+            }
+    </style>
+
+
 
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="reqbody">
-                    <div class="title-head"> ABC Company IT Support Request Form</div>
+                    <div class="title-head"> <h1 align="center"</h1>ABC Company IT Support Request Form</div>
         <div class="container">
             <!-- <div class="heading"> ABC Company IT Support Request Form</div> -->
                  <form action="#">
